# patrl.github.io

./: .#index.html  .dir-locals.el  .gitignore  .nixpkgs-version.json  CHANGELOG.md  CNAME  LICENSE  README.md  README.org  about-site.html  about-site.org  about.markdown  actl2018.html  actl2018.markdown  actl2018notes.html  actl2018notes.markdown  actlCourse.md  atom.xml  blog.html  build-site.el  cabal.project  conceptual-mathematics.html  conceptual-mathematics.org  cv.aux  cv.markdown  cv.tex  default.nix  deploy-dat.sh  deploy-ipfs.sh  deploy.sh  egg2018.markdown  formulaTest.markdown  formulaTest.md  hie.yaml  hoogle.sh  index.html  index.html~  index.markdown  index.md  index.org  (+28 more)
app/: Main.hs
auto/: cv.el
bib/: actl2018.bib  actlBib.bib  myWork.bib  refs.bib  snippets.bib  talks.bib
content/: index.org  other-page.org  research.org  resources.org  sitemap.org  teaching.org
csl/: chicago-author-date.csl  myBib.csl  unified-style-linguistics.csl
css/: clay-test.css  clay-test.hs  extraFonts.css  old.css  patrickdelliott.css  patrickdelliott.scss  syntax.css  test2.scss  tufte.css  tufte2.css
documents/: CLSproc.pdf.asc  SuB20.pdf.asc  cls52.pdf.asc  cls52paper.pdf.asc  nels46.pdf.asc  rebindingTense.pdf.asc  saltpaper.pdf.asc  superioritySnippet.doc  wccfl-draft.pdf.asc
drafts/: 2018-10-17-decentralize.html  2018-10-17-decentralize.org  monadicHeim.html  monadicHeim.org
egg2018/: ellipsisSemantics.html  ellipsisSemantics.markdown  ellipsisSyntax.html  ellipsisSyntax.markdown  index.html  index.markdown  introSemantics.html  introSemantics.markdown
js/: analytics.js  link.js
nix/: sources.json
posts/: 2016-10-15-ifQs.html  2016-10-15-ifQs.markdown  2016-10-15-ifQs.md  2016-10-15-ifQs.org  2018-10-22-decentralize.html  (+2 more)
(+102 files in other folders)
