name:               patrickdelliott
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base<5
                  , hakyll>=4.12.3.0
                  , pandoc
                  , pandoc-types
                  , mtl
                  , hakyll-sass
                  , containers
                  , clay
                  , process
  hs-source-dirs: src
  other-modules: Text.Pandoc.SideNote
  ghc-options:      -threaded
  default-language: Haskell2010
