name:               patrickdelliott
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base<5
                  , hakyll==4.12.5.2
                  , pandoc==2.7.3
                  , hakyll-sass==0.2.4
                  , pandoc-types
                  , mtl
                  , containers
  hs-source-dirs: src
  other-modules: Text.Pandoc.SideNote
  ghc-options:      -threaded
  default-language: Haskell2010
